--- a/package.json
+++ b/package.json
@@ -19,11 +19,21 @@
   },
   "homepage": "https://github.com/MultiverseLearningProducts/Reactive-Weather#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "process": "^0.11.10"
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "vm-browserify": "^1.1.2"
   }
 }
